@@ -6,7 +6,9 @@ public class EventInSFBool extends EventIn {
   public EventInSFBool() { EventType = FieldTypes.SFBOOL; }
 
   public void          setValue(boolean value) {
+	System.out.println("value is: " + value);
   if (value) {
+	System.out.println("sending TRUE");
     Browser.newSendEvent (this, "TRUE");
   } else {
     Browser.newSendEvent (this, "FALSE");
